Liste déroulante - bug/15 - Correction de l'alignement de chevron dans la liste déroulante Maj des tests et nettoyages

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2467,12 +2467,6 @@ li[aria-selected=true] {
   background-color: var(--qc-color-grey-pale);
 }
 
-.qc-dropdown-text {
-  display: flex;
-  justify-items: start;
-  overflow: hidden;
-}
-
 .qc-dropdown-choice, .qc-dropdown-placeholder {
   display: block;
   justify-content: start;
@@ -2491,12 +2485,8 @@ li[aria-selected=true] {
 }
 
 .qc-dropdown-button-icon {
-  align-items: center;
-  rotate: 180deg;
-}
-
-.qc-dropdown-button-icon-expanded {
-  transform: rotate(180deg);
+  display: flex;
+  align-content: center;
 }
 
 .qc-dropdown-list-margin {
