--- a/src/sdg/components/DropdownList/DropdownListButton/_dropdownListButton.scss
+++ b/src/sdg/components/DropdownList/DropdownListButton/_dropdownListButton.scss
@@ -30,12 +30,6 @@ $min-height: 40;
   }
 }
 
-.qc-dropdown-text {
-  display: flex;
-  justify-items: start;
-  overflow: hidden;
-}
-
 %dropdown-placeholder-text {
   display: block;
   justify-content: start;
@@ -56,10 +50,6 @@ $min-height: 40;
 }
 
 .qc-dropdown-button-icon {
-  align-items: center;
-  rotate: 180deg;
-}
-
-.qc-dropdown-button-icon-expanded {
-  transform: rotate(180deg);
+  display: flex;
+  align-content: center;
 }
